--- a/src/app/pages/extra-components/alertas-orion/components/categorias-vacias/categorias-vacias.component.html
+++ b/src/app/pages/extra-components/alertas-orion/components/categorias-vacias/categorias-vacias.component.html
@@ -13,7 +13,7 @@
       <td>{{ cat.id_category }}</td>
       <td>{{ cat.name }}</td>
       <td>{{ cat.padre }}</td>
-      <td><a href="{{ cat.urlOrigen }}" target="_blank">Ir a pedido</a></td>
+      <td><a href="{{ cat.urlOrigen }}" target="_blank">Ver Categoría</a></td>
       <td>{{ cat.redirigida }}</td>
     </tr>
   </tbody>
