--- a/src/app/pages/tables/abonos-informe/abonos-informe.component.html
+++ b/src/app/pages/tables/abonos-informe/abonos-informe.component.html
@@ -1,9 +1,9 @@
-<nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
+<nb-card>
 
   <nb-card-header>
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <div>
-        <span><b>Abonos - Productos</b></span>
+        <span><b>Abonos - Informe</b></span>
       </div>
       <div>
         <span *ngIf="fechaInicio != null">Fechas: {{ fechaInicio }} - {{ fechaFin }}</span>
