--- a/src/app/pages/tables/dashboard/dashboard.component.html
+++ b/src/app/pages/tables/dashboard/dashboard.component.html
@@ -30,30 +30,6 @@
   </div>
 </div>
 
-<div class="row">
-  <!--Top 10 Abonos/Motivos-->
-  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
-    <nb-card>
-      <nb-card-header>Top 10 Abonos/Motivos</nb-card-header>
-        <nb-card-body>
-          <ngx-top-abonos-motivos></ngx-top-abonos-motivos>
-        </nb-card-body>
-    </nb-card>
-  </div>
-</div>
-
-<div class="row">
-  <!--Top 10 Productos Abonados-->
-  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
-    <nb-card>
-      <nb-card-header>Top 10 Productos Abonados</nb-card-header>
-        <nb-card-body>
-          <ngx-top-productos-abonados></ngx-top-productos-abonados>
-        </nb-card-body>
-    </nb-card>
-  </div>
-</div>
-
 <!--Segunda Parte Dashboard-->
 <div class="row">
   <!--DashBoard Ventas hoy-->
@@ -84,6 +60,64 @@
     </nb-card>
   </div>
 </div>
+
+<div class="row">
+  <!--Top 10 Abonos/Motivos-->
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <nb-card>
+      <nb-card-header>Top 10 Abonos/Motivos</nb-card-header>
+        <nb-card-body>
+          <ngx-top-abonos-motivos></ngx-top-abonos-motivos>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
+<div class="row">
+  <!--Top 10 Productos Abonados-->
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+    <nb-card>
+      <nb-card-header>Top 10 Productos Abonados</nb-card-header>
+        <nb-card-body>
+          <ngx-top-productos-abonados></ngx-top-productos-abonados>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
+<!--Graficos de Abonos-->
+
+<div class="row">
+  <!--Abonos Hoy-->
+  <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
+    <nb-card>
+      <nb-card-header>Abonos Hoy</nb-card-header>
+        <nb-card-body>
+          <ngx-grafico-abonos-hoy></ngx-grafico-abonos-hoy>
+        </nb-card-body>
+    </nb-card>
+  </div>
+  <!--Abonos Hace 7 Dias-->
+  <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
+    <nb-card>
+      <nb-card-header>Abonos Hace 7 Días</nb-card-header>
+        <nb-card-body>
+          <ngx-grafico-abonos-hace7-dias></ngx-grafico-abonos-hace7-dias>
+        </nb-card-body>
+    </nb-card>
+  </div>
+  <!--Abonos hace 30 dias-->
+  <div class="col-xxxl-4 col-xxl-4 col-lg-5 col-md-6">
+    <nb-card>
+      <nb-card-header>Abonos Hace 30 Días</nb-card-header>
+        <nb-card-body>
+          <ngx-grafico-abonos-hace30dias></ngx-grafico-abonos-hace30dias>
+        </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+
+<!----->
 
 <div class="row">
   <!--Productos Top Hoy-->
