--- a/src/app/pages/tables/abonos-agencia-transporte/abonos-agencia-transporte.component.html
+++ b/src/app/pages/tables/abonos-agencia-transporte/abonos-agencia-transporte.component.html
@@ -3,7 +3,7 @@
   <nb-card-header>
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <div>
-        <span><b>Abonos - Agencias de Transporte</b></span>
+        <span><b>Abonos - Transportistas</b></span>
       </div>
       <div>
         <span *ngIf="fechaInicio != null">Fechas: {{ fechaInicio }} - {{ fechaFin }} </span>
