--- a/src/app/pages/tables/abonos-canales/abonos-canales.component.html
+++ b/src/app/pages/tables/abonos-canales/abonos-canales.component.html
@@ -3,9 +3,8 @@
 
   <nb-card-header>
     <div style="display: flex; justify-content: space-between; align-items: center;">
-      <div>
-        <span><b>Abonos - Canales</b></span>
-      </div>
+      <span><b>Abonos - Canales</b></span>
+
       <div>
         <span *ngIf="fechaInicio != null">Fechas: {{ fechaInicio }} - {{ fechaFin }}</span>
       </div>
@@ -21,12 +20,19 @@
         <nb-rangepicker #rangepicker (rangeChange)="cambioRango($event)"></nb-rangepicker>
       </div>
 
-      <div>
-        <button nbButton status="primary" style="margin-left: 15px;" (click)="buscar()">Buscar</button>
+      <div style="display: flex;">
+        <div>
+          <button nbButton status="primary" style="margin-left: 15px;" (click)="buscar()">Buscar</button>
+        </div>
+
+        <div>
+          <button nbButton status="primary" (click)="exportToExcel()" style="margin-right: 10px; margin-left: 10px;">Exportar</button>
+        </div>
+
       </div>
     </div><br><br><br>
 
-    <ng2-smart-table [settings]="config" [source]="datosGrafico"></ng2-smart-table>
+    <ng2-smart-table [settings]="config" [source]="datosGrafico" id="season-tble"></ng2-smart-table>
 
   </nb-card-body>
 </nb-card>
