--- a/src/app/pages/tables/dashboard/components/ventas-semanal/ventas-semanal.component.html
+++ b/src/app/pages/tables/dashboard/components/ventas-semanal/ventas-semanal.component.html
@@ -13,8 +13,8 @@
         <td>{{ dato.fecha }}</td>
         <td *ngIf="dato.porcentaje < 0" align="center">
           <div class="caja">
-            <!-- <img src= "../../../../assets/images/abajo.png" class="imagen"><span class="rojo">{{ dato.porcentaje }}%</span> -->
-            <img src= "/orion/assets/images/abajo.png" class="imagen"><span class="rojo">{{ dato.porcentaje }}%</span>
+            <img src= "../../../../assets/images/abajo.png" class="imagen"><span class="rojo">{{ dato.porcentaje }}%</span>
+            <!-- <img src= "/orion/assets/images/abajo.png" class="imagen"><span class="rojo">{{ dato.porcentaje }}%</span> -->
           </div>
         </td>
         <td *ngIf="dato.porcentaje > 0" align="center">
